# SilverDeck

./: .gitignore  Makefile  README.md
.github/workflows/: ci.yml  release.yml
Arch-silverblue/: .gitignore  CONTRIBUTING.md  DERIVING.md  Makefile  README.md  SECURITY.md  netlify.toml
Arch-silverblue/.github/workflows/: ci.yml  website.yml
Arch-silverblue/config/: distro.conf  os-release.in
Arch-silverblue/docs/: installing.md  update-flow.md
Arch-silverblue/iso/: Dockerfile  build.sh
Arch-silverblue/iso/airootfs/etc/greetd/: live.toml
Arch-silverblue/src/bootloader/: grub-helpers.sh  sdboot-helpers.sh
Arch-silverblue/src/init/: silverblue-mark-good.service  silverblue-mark-good.sh  silverblue-rollback.service  silverblue-rollback.sh  silverblue-rollback.target  silverblue-watchdog.conf
Arch-silverblue/src/installer/: install-lib.sh  silverblue-install
Arch-silverblue/src/update-engine/: silverblue-update
Arch-silverblue/tests/qemu/: harness.py  run.sh
Arch-silverblue/tests/unit/: helper.bash  run.sh  test_bootloader_detect.bats  test_health_check.bats  test_installer.bats  test_installer_prompts.bats  test_installer_unattended.bats  test_naming.bats  test_prune.bats  test_render_entries.bats  test_rollback.bats
Arch-silverblue/tests/unit/mocks/: arch-chroot  bootctl  btrfs  grub-editenv
Arch-silverblue/tools/: verify-units.sh
Arch-silverblue/website/: .gitignore  README.md  astro.config.mjs  package-lock.json  package.json
Arch-silverblue/website/scripts/: sync-docs.mjs
Arch-silverblue/website/src/content/docs/: faq.md  (+3 more)
Arch-silverblue/website/src/styles/: custom.css
docs/: architecture.md  boot-splash.md  building.md  contributing.md  index.md  installation.md  installer-internals.md  troubleshooting.md  updates-and-rollback.md  user-guide.md
packaging/: Dockerfile.builder  build-repo.sh
packaging/silverdeck-installer/: PKGBUILD
packaging/silverdeck-plymouth/: PKGBUILD
packaging/silverdeck-plymouth/files/: silverdeck.plymouth  silverdeck.script
packaging/silverdeck-session/: PKGBUILD
packaging/silverdeck-session/files/: 50-silverdeck.rules  71-silverdeck-controllers.rules  greetd-config.toml  greetd-dropin.conf  greetd-plymouth.conf  silverdeck-firstboot.service  silverdeck-session  silverdeck-sysusers.conf  silverdeck-tmpfiles.conf  silverdeck-ui-run  silverdeck-update.service  store.json  sway.config
packaging/silverdeck-ui/: PKGBUILD
silverdeck-ui/: Cargo.toml  flake.nix
silverdeck-ui/crates/app/: Cargo.toml
silverdeck-ui/crates/app/src/: library.rs  main.rs  modal.rs  root.rs  settings.rs  store_view.rs  theme.rs
silverdeck-ui/crates/core/: Cargo.toml
silverdeck-ui/crates/core/src/: lib.rs
silverdeck-ui/crates/input/: Cargo.toml
silverdeck-ui/crates/input/src/: lib.rs
silverdeck-ui/crates/installer/: Cargo.toml
silverdeck-ui/crates/installer/src/: engine.rs  main.rs  root.rs
silverdeck-ui/crates/installer/src/screens/: confirm.rs  disks.rs  done.rs  failed.rs  mod.rs  network.rs  progress.rs  welcome.rs
silverdeck-ui/crates/launch/: Cargo.toml
silverdeck-ui/crates/launch/src/: lib.rs
silverdeck-ui/crates/sources/: Cargo.toml
silverdeck-ui/crates/sources/src/: desktop.rs  heroic.rs  lib.rs  steam.rs
silverdeck-ui/crates/store/: Cargo.toml
silverdeck-ui/crates/store/src/: lib.rs
silverdeck-ui/crates/system/: Cargo.toml
silverdeck-ui/crates/system/src/: lib.rs
silverdeck-ui/crates/ui-kit/: Cargo.toml
silverdeck-ui/crates/ui-kit/src/: lib.rs  osk.rs
silverdeck-ui/dev/: installer-sway.config  sway.config
(+5 files in other folders)
