[workspace]
resolver = "2"
members = [
    "crates/app",
    "crates/core",
    "crates/input",
    "crates/installer",
    "crates/launch",
    "crates/sources",
    "crates/store",
    "crates/system",
    "crates/ui-kit",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/sinisterMage/SilverDeck"

[workspace.dependencies]
silverdeck-core = { path = "crates/core" }
silverdeck-input = { path = "crates/input" }
silverdeck-launch = { path = "crates/launch" }
silverdeck-sources = { path = "crates/sources" }
silverdeck-store = { path = "crates/store" }
silverdeck-system = { path = "crates/system" }
silverdeck-ui-kit = { path = "crates/ui-kit" }

# Pinned exactly per the SilverDeck plan; bump deliberately, never implicitly.
gpui = "=0.2.2"

anyhow = "1"
async-channel = "2"
env_logger = "0.11"
async-process = "2"
futures-lite = "2"
gilrs = "0.11"
log = "0.4"
portable-pty = "0.9"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
steamlocate = "2"
swayipc-async = "3"
thiserror = "2"
ureq = { version = "3", features = ["json"] }

tempfile = "3"

[profile.release]
lto = "thin"
strip = "debuginfo"
