[package]
name = "silverdeck-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "silverdeck-ui"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-channel.workspace = true
env_logger.workspace = true
gpui.workspace = true
log.workspace = true
silverdeck-core.workspace = true
silverdeck-input.workspace = true
silverdeck-launch.workspace = true
silverdeck-sources.workspace = true
silverdeck-store.workspace = true
silverdeck-system.workspace = true
silverdeck-ui-kit.workspace = true
