[package]
name = "silverdeck-launch"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-channel.workspace = true
async-process.workspace = true
futures-lite.workspace = true
log.workspace = true
silverdeck-core.workspace = true
swayipc-async.workspace = true
