[package]
name = "silverdeck-sources"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
silverdeck-core.workspace = true
steamlocate.workspace = true

[dev-dependencies]
tempfile.workspace = true
