[package]
name = "silverdeck-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
log.workspace = true
portable-pty.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
silverdeck-system.workspace = true
ureq.workspace = true

[dev-dependencies]
tempfile.workspace = true
